<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView"
            android:layout_marginBottom="@dimen/define_dimen_10"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewpager_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <me.relex.circleindicator.CircleIndicator3
                        android:id="@+id/indicator_3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/define_dimen_30"
                        android:layout_gravity="center"
                        app:ci_drawable="@drawable/bg_indicatior_selected"
                        app:ci_drawable_unselected="@drawable/bg_indicatior_unselected" />
                </LinearLayout>

                <include layout="@layout/layout_list_playlist" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/define_dimen_6" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/define_dimen_20"
                android:layout_marginTop="@dimen/define_dimen_80"
                android:orientation="vertical"
                android:paddingLeft="@dimen/define_dimen_5">

                <LinearLayout
                    android:id="@+id/layout_my_channel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_account_circle_black" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_channel"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_playlist_play_black" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playlist"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/define_dimen_16"
                    android:layout_marginRight="@dimen/define_dimen_16"
                    android:background="@color/dividerColor" />

                <LinearLayout
                    android:id="@+id/layout_popular_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_equalizer_black" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_popular"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_latest_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:src="@drawable/ic_videocam_black"
                        android:contentDescription="@string/app_name" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_latest"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/define_dimen_16"
                    android:layout_marginRight="@dimen/define_dimen_16"
                    android:background="@color/dividerColor" />

                <LinearLayout
                    android:id="@+id/layout_rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_rate_app" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_app"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_share_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_share_app" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_app"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/define_dimen_16"
                    android:layout_marginRight="@dimen/define_dimen_16"
                    android:background="@color/dividerColor" />

                <LinearLayout
                    android:id="@+id/layout_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_about" />

                    <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
