<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/youtube_fragment"
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_14">

            <com.example.youtubechannel.ui.widget.textview.RobotoBoldTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal" />

            <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

            <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                android:id="@+id/tv_open_youtube_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/define_dimen_30"
                android:background="@drawable/bg_red_shape_round_corner"
                android:padding="@dimen/define_dimen_12"
                android:text="@string/open_youtube_video"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_30">

                <com.example.youtubechannel.ui.widget.textview.RobotoMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/comments"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_normal" />

                <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                    android:id="@+id/tv_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/see_all_underline"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/text_size_small"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.example.youtubechannel.ui.widget.textview.RobotoRegularTextView
                    android:id="@+id/tv_no_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/define_dimen_120"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/no_comment"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/define_dimen_5"
        android:background="@color/colorPrimary" />
</LinearLayout>
